--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.431",
+    "@thirdweb-dev/storage": "^1.2.9",
     "connectkit": "^1.5.2",
     "next": "^13.4.19",
     "react": "^18.0.0",
