--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@axelar-network/axelarjs-sdk": "^0.13.5",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.431",
     "@thirdweb-dev/storage": "^1.2.9",
